[project]
name = "imageddpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "diffusers>=0.36.0",
    "numpy>=2.3.5",
    "peft>=0.18.0",
    "torch>=2.9.1",
    "trl==0.21.0",
    "wandb>=0.23.1",
]
