[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imageddpo"
version = "0.1.0"
description = "The equivalent of SDImg2ImgPipeline for DDPO: modifying DDPOTrainer to support image inputs in addition to text prompts"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Hector Astrom", email = "hastrom@mit.edu"}
]
license = {text = "MIT"}
keywords = ["ddpo", "diffusion", "reinforcement-learning", "image-to-image", "stable-diffusion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "diffusers>=0.36.0",
    "numpy>=2.3.5",
    "peft>=0.18.0",
    "torch>=2.9.1",
    "trl==0.21.0",
    "wandb>=0.23.1",
]

[project.urls]
Homepage = "https://github.com/hectorastrom/imageddpo"
Repository = "https://github.com/hectorastrom/imageddpo"
Issues = "https://github.com/hectorastrom/imageddpo/issues"

[tool.setuptools]
packages = ["imageddpo"]

[tool.setuptools.package-data]
imageddpo = []
